...
        height: 500,
        child: Form(
          key: _formKey,
          child: Column(
            children: <Widget>[
              TextFormField(
                key: const Key('songHeaderDialog_songTitle'),
                decoration: const InputDecoration(labelText: 'Song Title'),
                initialValue: song.title,
                validator: (value) {
                  if (value == null || value.isEmpty) {
                    return 'Please enter a song title';
                  }
                  return null;
                },
                onSaved: (value) {
                  song.title = value!;
                },
              ),
              TextFormField(
                key: const Key('songHeaderDialog_artist'),
                decoration: const InputDecoration(labelText: 'Artist'),
                initialValue: song.artist,
                validator: (value) {
                  if (value == null || value.isEmpty) {
                    return 'Please enter an artist';
                  }
                  return null;
                },
                onSaved: (value) {
                  song.artist = value!;
                },
              ),
              DropdownButtonFormField<String>(
                key: const Key('songHeaderDialog_songKey'),
                value: song.initialKey,
                decoration: const InputDecoration(labelText: 'Key'),
                items: <String>[
                  'A',
                  'A♯/B♭',
                  'B',
                  'C',
                  'C♯/D♭',
                  'D',
                  'D♯/E♭',
                  'E',
                  'F',
                  'F♯/G♭',
                  'G',
...
                }).toList(),
                onChanged: (value) {
                  song.initialKey = value!;
                },
              ),
              TextFormField(
                key: const Key('songHeaderDialog_tempo'),
                initialValue: song.tempo,
                decoration: const InputDecoration(labelText: 'Tempo'),
                keyboardType: TextInputType.number,
                validator: (value) {
                  if (value == null ||
                      value.isEmpty ||
                      num.tryParse(value) == null ||
                      num.tryParse(value)! < 10 ||
                      num.tryParse(value)! > 300
                      ) {
                    return 'Please enter a tempo in BPM';
                  }
                  return null;
                },
                onSaved: (value) {
                  song.tempo = value!;
                },
              ),
              DropdownButtonFormField<String>(
                key: const Key('songHeaderDialog_timeSignature'),
                decoration: const InputDecoration(labelText: 'Time Signature'),
                value: song.timeSignature,
                items: <String>[
                  '4/4',
                  '3/4',
                  '6/8',
                  '2/4',
                  '3/8',
                  '5/4',
                  '7/8',
                  '9/8',
                  '12/8'
...
          child: const Text('Cancel'),
          onPressed: () {
            Navigator.of(context).pop();
          },
        ),
        TextButton(
          child: const Text('Submit'),
          onPressed: () async {
            logger.t('Submit button pressed');
            if (_formKey.currentState?.validate() ?? false) {
              _formKey.currentState?.save();

              onSongCreated(song);
...
